# Mental-Health-RAG-Chatbot

./: .env.example  .gitignore  README.md  main.py  processed_docs.pkl  pyproject.toml  team_members.txt  test_cache.pkl
artifacts/: intent_classifier_optimized.json  language_detection_best_model.pkl  language_detection_best_vectorizer.pkl
artifacts/dspy optimized prompts/: condenser_optimized.json  general_conversation_optimized.json  grounded_response_optimized.json  intent_classifier_optimized.json  router_optimized.json
artifacts/emotion_classifier/: adapter_config.json  training_config.json
metrics/dspy_overfit_analysis/: overfit_analysis_report.json
notebooks/: Intent_classification.ipynb  Language Detection Notebook.ipynb  Language_Detection.ipynb  emotion-classifier-new.ipynb  emotion-classifier.ipynb  intent_classifier_notebook.ipynb
qdrant_db/: meta.json
src/: app.py  config.py  dspy_optimizer.py  evaluator_deepeval.py  evaluator_ragas.py  modules.py  rag_pipeline.py  router.py  run_evaluation.py  storage.py
src/chatbot/: __init__.py
src/chatbot/nlp/: __init__.py  emotion_classifier.py  intent_classifier.py  language_detector.py
src/modules/: __init__.py  emotion_classifier.py  eval_dataset_builder.py  intent_classifier.py  language_detector.py  multilingual_patterns.py  prompts.py  rag.py  rag_evaluation.py
src/prompts/: dspy_evaluators.py  dspy_overfit_analysis.py  dspy_training_data.py  optimize_prompts.py  prompts.py
src/static/: style.css
src/templates/: index.html
tests/: __init__.py  test_emotion_classifier.py  test_intent_classifier.py  test_language_detector.py  test_mental_health_rag.py  test_router.py
