[project]
name = "project-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.4.0",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

