[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "groq>=1.4.0",
    "joblib>=1.5.3",
    "langchain>=1.3.2",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.24.0",
    "ragas>=0.2.0",
    "deepeval>=0.21.0",
    "peft>=0.19.1",
    "langchain-openai>=0.1.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "coverage>=7.14.1",
    "langsmith>=0.8.9",
    "dspy>=3.2.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modules"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
